- Reopening PDF.js pages from e.g. a session file will now re-download and
  display those PDFs.
- Improved behavior when using `:open-download` in a sandboxed environment (KDE
  Flatpak).
- qutebrowser now enables the new PyQt exit scheme, which should result in
  things being cleaned up more properly (e.g. cookies being saved even without
  a timeout) on PyQt 5.13.1 and newer.
- Performance improvements for the following areas:
  * Adding settings with URL patterns
  * Matching of settings using URL patterns

Fixed
~~~~~

- dictcli.py now works correctly on Windows again.
- The logic for `:restart` has been revisited which should fix issues with
  relative basedirs.
- Remaining issues (mostly warnings) related to Python 3.8, especially for
  QtWebKit.
- Workaround for a Qt bug where a page never finishes loading with a
  non-overridable TLS error (e.g. due to HSTS).
- Various improvements for URL/searchengine detection:
  - Strings with a dot but with characters not allowed in a URL (e.g. an
    underscore) are now not treated as URL anymore.
  - Strings like "5/8" are now not treated as IP anymore.
  - URLs with an explicit scheme and a space (%20) are correctly treated as
    URLs.
  - Mail addresses are now treated as search terms.
  - With `url.open_base_url` set, searching for a search engine name now works.
  - `url.open_base_url = True` together with `url.auto_search = 'never'` is now
    handled correctly.
  - Fixed crash when a search engine URL turns out to be invalid.

v1.8.3 (2019-12-05)
-------------------

Fixed
~~~~~

- Segmentation fault introduced in v1.8.2 when a tab gets closed immediately
  after it has finished loading (e.g. with certain login flows).

v1.8.2 (2019-11-22)
-------------------

Changed
~~~~~~~

- Windows/macOS releases now ship with Qt 5.12.6. This includes security fixes
  up to Chromium 77.0.3865.120 plus a security fix for CVE-2019-13720 from
  Chromium 78.

Fixed
~~~~~
