@@ -84,6 +84,53 @@ def test_start_verbose(proc, qtbot, message_mock, py_proc):
     assert qutescheme.spawn_output == expected
 
 
+@pytest.mark.parametrize('stdout', [True, False])
+@pytest.mark.parametrize('stderr', [True, False])
+def test_start_output_message(proc, qtbot, caplog, message_mock, py_proc,
+                              stdout, stderr):
+    proc._output_messages = True
+
+    code = ['import sys']
+    if stdout:
+        code.append('print("stdout text")')
+    if stderr:
+        code.append(r'sys.stderr.write("stderr text\n")')
+    code.append("sys.exit(0)")
+
+    with caplog.at_level(logging.ERROR, 'message'):
+        with qtbot.waitSignals([proc.started, proc.finished],
+                               timeout=10000,
+                               order='strict'):
+            argv = py_proc(';'.join(code))
+            proc.start(*argv)
+
+    if stdout and stderr:
+        stdout_msg = message_mock.messages[0]
+        stderr_msg = message_mock.messages[1]
+        msg_count = 2
+    elif stdout:
+        stdout_msg = message_mock.messages[0]
+        stderr_msg = None
+        msg_count = 1
+    elif stderr:
+        stdout_msg = None
+        stderr_msg = message_mock.messages[0]
+        msg_count = 1
+    else:
+        stdout_msg = None
+        stderr_msg = None
+        msg_count = 0
+
+    assert len(message_mock.messages) == msg_count
+
+    if stdout_msg is not None:
+        assert stdout_msg.level == usertypes.MessageLevel.info
+        assert stdout_msg.text == 'stdout text'
+    if stderr_msg is not None:
+        assert stderr_msg.level == usertypes.MessageLevel.error
+        assert stderr_msg.text == 'stderr text'
+
+
 def test_start_env(monkeypatch, qtbot, py_proc):
     monkeypatch.setenv('QUTEBROWSER_TEST_1', '1')
     env = {'QUTEBROWSER_TEST_2': '2'}
